apps/backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: k8tre-backend
      containers:
        - name: backend
          # Image is set by environment-specific patches
          image: example.org/placeholder/k8tre-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
